--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name="WizardApplication"
+        android:name=".WizardApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WizardDuel"
         tools:targetApi="31">
+        <activity
+            android:name=".GameActivity"
+            android:exported="false" />
         <activity
             android:name=".OptionsActivity"
             android:exported="false" />
