--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,19 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.GameActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenLayout|keyboardHidden|keyboard|fontScale|mcc|locale" />
         <activity
             android:name=".activities.OptionsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenLayout|keyboardHidden|keyboard|fontScale|mcc|locale" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenLayout|keyboardHidden|keyboard|fontScale|mcc|locale" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
